fixed color contrast issue for links in darker blue chat bubbles

--- a/less/talk.less
+++ b/less/talk.less
@@ -88,6 +88,13 @@
         &__right {
             justify-content: flex-end;
 
+            a {
+              color: #ffffff;
+            }
+          
+            a:hover {
+              color: #ffcc00;
+            }
 
             .talk__chat-container {
                 flex-direction: row-reverse;
